# quicklyRAG

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  re.txt  requirements.txt  test.py
document_test/: document.txt
quicklyRag/: QuicklyRagAPI.py  export.py  test.py
quicklyRag/baseClass/: PlatformBase.py  VectorBase.py  documentBase.py  searchBase.py
quicklyRag/baseEnum/: PlatformEnum.py  VectorEnum.py
quicklyRag/baseModel/: embeddingBase.py  vectorBase.py
quicklyRag/chat/chatRequest/: chatRequestHandler.py
quicklyRag/config/: ChatConfig.py  DocumentConfig.py  MyConfig.py  PlatformConfig.py  VectorConfig.py  myConfig.py
quicklyRag/document/: loadDocument.py  spliterDocument.py  todolist.txt
quicklyRag/factory/: QuicklyEmbeddingModelFactory.py  QuicklyVectorStoreFactory.py  chatModelFactory.py  embeddingFactory.py  vectorFactory.py
quicklyRag/model/: MyAi.py  MyModel.py  aa.py  myModel.py
quicklyRag/provider/: QuicklyChatModelProvider.py  QuicklyEmbeddingModelProvider.py  QuicklyRerankerProvider.py  QuicklyVectorStoreProvider.py  chatModelFactory.py
quicklyRag/vector/: MyVector.py
quickly_rag/: __init__.py  api.py
quickly_rag/config/: chat_config.py  document_config.py  platform_config.py  vector_config.py
quickly_rag/core/: Platform_base.py  Vector_base.py  document_base.py  search_base.py
quickly_rag/document/: document_loader.py  document_splitter.py
quickly_rag/enums/: platform_enum.py  vector_enum.py
quickly_rag/provider/: chat_model_provider.py  embedding_model_provider.py  reranker_provider.py  vector_store_provider.py
(+23 files in other folders)
