[project]
name = "quicklyrag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.0",
    "langchain>=1.0",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.2.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "loguru>=0.7.3",
    "markdown>=3.10",
    "unstructured>=0.18.21",
    "uvicorn>=0.38.0",
]
